# trt_edgellm_docker

./: .gitignore  .gitmodules  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json  devcontainer_healthcheck.sh  ensure_host_mounts.sh  on_create.sh
infer/: CMakeLists.txt  input_qwen2_vl_2b_example.json  output_qwen2_vl_2b_example.json  qwen2_vl_infer.cpp  run_qwen2_vl_2b.sh
scripts/: setup.sh
